make a loop for row head, printed col head

--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "438554e9",
+   "id": "92636245",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85d189be",
+   "id": "ab06c863",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6a4a0cee",
+   "id": "acdcfa25",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "481e455b",
+   "id": "6ed1f128",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0f16b35c",
+   "id": "8c55097e",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "27d96c7f",
+   "id": "8f80d92a",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0b65abc1",
+   "id": "89aafe3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ac3afb8e",
+   "id": "cac65488",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "600b1a9f",
+   "id": "c476c3ae",
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b436ab6b",
+   "id": "c37adb50",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "01274020",
+   "id": "7102a249",
    "metadata": {},
    "outputs": [
     {
@@ -2332,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9d288f30",
+   "id": "e346fccf",
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "140d3aa7",
+   "id": "9b4dcf7f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5c8a69c4",
+   "id": "802d8923",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "65084b6d",
+   "id": "bb652512",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,7 +2394,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8fe6c15b",
+   "id": "242e337d",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3816632a",
+   "id": "3c0b32fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,7 +2425,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b7712534",
+   "id": "827e31bb",
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2446,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0ec9ab29",
+   "id": "0f1ae2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,8 +2456,10 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4bff13c0",
-   "metadata": {},
+   "id": "a104c6e9",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3240,8 +3242,227 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "bf383c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = [row for row in ccnyCalenderTable[0].find_all('tr')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "53fe6a0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = [0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "d4e02304",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DATES', 'DAYS', '\\xa0']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_heads = [col.get_text() for col in rows[0].find_all('th')]\n",
+    "col_heads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "230fb8b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<tr>\n",
+       " <td style=\"width:305px\">\n",
+       "  <p>\n",
+       "   <strong>\n",
+       "    August 01\n",
+       "   </strong>\n",
+       "  </p>\n",
+       " </td>\n",
+       " <td style=\"width:327px\">\n",
+       "  <p>\n",
+       "   <strong>\n",
+       "    Sunday\n",
+       "   </strong>\n",
+       "  </p>\n",
+       " </td>\n",
+       " <td style=\"width:617px\">\n",
+       "  <p>\n",
+       "   <strong>\n",
+       "    Application for degree for January and February 2022 begins\n",
+       "   </strong>\n",
+       "  </p>\n",
+       " </td>\n",
+       "</tr>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_rows = rows[1:]\n",
+    "HTML(data_rows[0].prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d3536aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value_series = [row.find_all('td') for row in data_rows]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b2a721b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[<td style=\"width:305px\">\n",
+       "  <p><strong>August 01</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p><strong>Sunday</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p><strong>Application for degree for January and February 2022 begins</strong></p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p>August 18</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p>Wednesday</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p>Last day to apply for Study Abroad</p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p><strong>August 24</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p><strong>Tuesday</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p><strong>Last day of Registration;<br/>\n",
+       "  \t\t\tLast day to file ePermit for the Fall 2021;<br/>\n",
+       "  \t\t\tLast day to drop classes for 100% tuition refund;</strong></p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p>August 25</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p>Wednesday</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p>Start of Fall Term;<br/>\n",
+       "  \t\t\tClasses begin;<br/>\n",
+       "  \t\t\tInitial Registration Appeals begin;</p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p><strong>August 25 - 31</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p><strong>Wednesday - Tuesday</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p><strong>Change of program period; late fees apply</strong></p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p>August 26</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p>Thursday</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p>Last day for Independent Study</p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p><strong>August 28</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p><strong>Saturday</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p><strong>First day of Saturday Classes</strong></p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p>August 31</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p>Tuesday</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p>Last day to add a class to an existing enrollment;<br/>\n",
+       "  \t\t\tLast day for 75% tuition refund;<br/>\n",
+       "  \t\t\tFinancial Aid Certification Enrollment Status date;<br/>\n",
+       "  \t\t\tLast day to apply for Audit option;<br/>\n",
+       "  \t\t\tLast day to drop without the grade of 'WD';<br/>\n",
+       "  \t\t\tInitial Registration Appeals end;</p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p><strong>September 01</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p><strong>Wednesday</strong></p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p><strong>Verification of Enrollment rosters available to faculty;<br/>\n",
+       "  \t\t\tCourse Withdrawal drop period begins (A grade of 'WD' is assigned to students who officially drop a class);</strong></p>\n",
+       "  </td>],\n",
+       " [<td style=\"width:305px\">\n",
+       "  <p>September 03 - 08</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:327px\">\n",
+       "  <p>Friday - Wednesday</p>\n",
+       "  </td>,\n",
+       "  <td style=\"width:617px\">\n",
+       "  <p>No classes scheduled</p>\n",
+       "  </td>]]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_series[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cb31a20e",
+   "id": "edd91994",
    "metadata": {},
    "outputs": [],
    "source": []
