--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92636245",
+   "id": "69d45adb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ab06c863",
+   "id": "0d08b754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acdcfa25",
+   "id": "1b1069a1",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6ed1f128",
+   "id": "b047dc09",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c55097e",
+   "id": "47572f78",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8f80d92a",
+   "id": "7f62b24d",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "89aafe3c",
+   "id": "5210a917",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cac65488",
+   "id": "8eb77a49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c476c3ae",
+   "id": "1c47cb30",
    "metadata": {},
    "outputs": [
     {
@@ -2290,7 +2290,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c37adb50",
+   "id": "d3155c00",
    "metadata": {},
    "outputs": [
     {
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7102a249",
+   "id": "b6030730",
    "metadata": {},
    "outputs": [
     {
@@ -2332,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e346fccf",
+   "id": "dd05fe2b",
    "metadata": {},
    "outputs": [
     {
@@ -2353,7 +2353,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9b4dcf7f",
+   "id": "a42bf200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,7 +2363,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "802d8923",
+   "id": "7aaf0a9d",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bb652512",
+   "id": "502ecfbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2394,7 +2394,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "242e337d",
+   "id": "e23836b9",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2415,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3c0b32fd",
+   "id": "ada82bf6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,7 +2425,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "827e31bb",
+   "id": "39263d3e",
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2446,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0f1ae2f7",
+   "id": "fe56f721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2456,7 +2456,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a104c6e9",
+   "id": "b129699b",
    "metadata": {
     "scrolled": true
    },
@@ -3243,7 +3243,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bf383c03",
+   "id": "18adbc44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3253,7 +3253,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53fe6a0b",
+   "id": "b58608fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3263,7 +3263,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d4e02304",
+   "id": "54ea496b",
    "metadata": {},
    "outputs": [
     {
@@ -3285,7 +3285,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "230fb8b9",
+   "id": "eeff1836",
    "metadata": {},
    "outputs": [
     {
@@ -3332,7 +3332,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d3536aa9",
+   "id": "a8ad1e80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3342,7 +3342,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "b2a721b7",
+   "id": "a3527665",
    "metadata": {},
    "outputs": [
     {
@@ -3461,8 +3461,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "13ccf6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['August 01',\n",
+       "  'Sunday',\n",
+       "  'Application for degree for January and February 2022 begins'],\n",
+       " ['August 18', 'Wednesday', 'Last day to apply for Study Abroad'],\n",
+       " ['August 24',\n",
+       "  'Tuesday',\n",
+       "  'Last day of Registration;\\n\\t\\t\\tLast day to file ePermit for the Fall 2021;\\n\\t\\t\\tLast day to drop classes for 100% tuition refund;'],\n",
+       " ['August 25',\n",
+       "  'Wednesday',\n",
+       "  'Start of Fall Term;\\n\\t\\t\\tClasses begin;\\n\\t\\t\\tInitial Registration Appeals begin;'],\n",
+       " ['August 25 - 31',\n",
+       "  'Wednesday - Tuesday',\n",
+       "  'Change of program period; late fees apply'],\n",
+       " ['August 26', 'Thursday', 'Last day for Independent Study'],\n",
+       " ['August 28', 'Saturday', 'First day of Saturday Classes'],\n",
+       " ['August 31',\n",
+       "  'Tuesday',\n",
+       "  \"Last day to add a class to an existing enrollment;\\n\\t\\t\\tLast day for 75% tuition refund;\\n\\t\\t\\tFinancial Aid Certification Enrollment Status date;\\n\\t\\t\\tLast day to apply for Audit option;\\n\\t\\t\\tLast day to drop without the grade of 'WD';\\n\\t\\t\\tInitial Registration Appeals end;\"],\n",
+       " ['September 01',\n",
+       "  'Wednesday',\n",
+       "  \"Verification of Enrollment rosters available to faculty;\\n\\t\\t\\tCourse Withdrawal drop period begins (A grade of 'WD' is assigned to students who officially drop a class);\"],\n",
+       " ['September 03 - 08', 'Friday - Wednesday', 'No classes scheduled']]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value_rows = [[col.get_text().strip() for col in row.find_all('td')]  for row in data_rows] \n",
+    "value_rows[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7c1376a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "edd91994",
+   "id": "72752539",
    "metadata": {},
    "outputs": [],
    "source": []
