import numpy and make numpy array for rows

--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "69d45adb",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "0d08b754",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "1b1069a1",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "200"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "b047dc09",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "'<!DOCTYPE html>\\n<html lang=\"en\" dir=\"ltr\" prefix=\"content: http://purl.org/rss/1.0/modules/content/  dc: http://purl.org/dc/terms/  foaf: http://xmlns.com/foaf/0.1/  og: http://ogp.me/ns#  rdfs: http://www.w3.org/2000/01/rdf-schema#  schema: http://schema.org/  sioc: http://rdfs.org/sioc/ns#  sioct: http://rdfs.org/sioc/types#  skos: http://www.w3.org/2004/02/skos/core#  xsd: http://www.w3.org/2001/XMLSchema# \">\\n  <head>\\n    <meta charset=\"utf-8\" /><script type=\"text/javascript\">(window.NREUM||(NREUM={})).init={ajax:{deny_list:[\"bam.nr-data.net\"]}};(window.NREUM||(NREUM={})).loader_config={licenseKey:\"NRJS-83581f4fb59b51cbeb7\",applicationID:\"254978615\"};window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){var i=e[n]={exports:{}};t[n][0].call(i.exports,function(e){var i=t[n][1][e];return r(i||e)},i,i.exports)}return e[n].exports}if(\"function\"==typeof __nr_require)return __nr_require;for(var i=0;i<n.length;i++)r(n[i]);return r}({1:[function(t,e,n){function r(){}f'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "47572f78",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "7f62b24d",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "137292"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "5210a917",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "8eb77a49",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "1c47cb30",
    "metadata": {},
    "outputs": [
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "d3155c00",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2299,7 @@
        "'title'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2310,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "b6030730",
    "metadata": {},
    "outputs": [
@@ -2320,7 +2320,7 @@
        "'Fall 2021 Academic Calendar | The City College of New York'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2331,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "dd05fe2b",
    "metadata": {},
    "outputs": [
@@ -2341,7 +2341,7 @@
        "<p> </p>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "a42bf200",
    "metadata": {},
    "outputs": [],
@@ -2362,7 +2362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "7aaf0a9d",
    "metadata": {},
    "outputs": [
@@ -2372,7 +2372,7 @@
        "105"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "502ecfbc",
    "metadata": {},
    "outputs": [],
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "e23836b9",
    "metadata": {},
    "outputs": [
@@ -2403,7 +2403,7 @@
        "1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "ada82bf6",
    "metadata": {},
    "outputs": [],
@@ -2424,7 +2424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "39263d3e",
    "metadata": {},
    "outputs": [
@@ -2434,7 +2434,7 @@
        "1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2445,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "id": "fe56f721",
    "metadata": {},
    "outputs": [],
@@ -2455,7 +2455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "id": "b129699b",
    "metadata": {
     "scrolled": true
@@ -3231,7 +3231,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3242,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "id": "18adbc44",
    "metadata": {},
    "outputs": [],
@@ -3252,7 +3252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "id": "b58608fc",
    "metadata": {},
    "outputs": [],
@@ -3262,7 +3262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "id": "54ea496b",
    "metadata": {},
    "outputs": [
@@ -3272,7 +3272,7 @@
        "['DATES', 'DAYS', '\\xa0']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3284,7 +3284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "id": "eeff1836",
    "metadata": {},
    "outputs": [
@@ -3319,7 +3319,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3331,7 +3331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "a8ad1e80",
    "metadata": {},
    "outputs": [],
@@ -3341,7 +3341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "a3527665",
    "metadata": {},
    "outputs": [
@@ -3450,7 +3450,7 @@
        "  </td>]]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3461,7 +3461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "13ccf6c3",
    "metadata": {},
    "outputs": [
@@ -3492,7 +3492,7 @@
        " ['September 03 - 08', 'Friday - Wednesday', 'No classes scheduled']]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3504,7 +3504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "7c1376a3",
    "metadata": {},
    "outputs": [],
@@ -3514,8 +3514,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "72752539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numpy_value_rows = np.array(value_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "bc37f34a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['August 01', 'August 18', 'August 24', 'August 25',\n",
+       "        'August 25 - 31'],\n",
+       "       ['Sunday', 'Wednesday', 'Tuesday', 'Wednesday',\n",
+       "        'Wednesday - Tuesday'],\n",
+       "       ['Application for degree for January and February 2022 begins',\n",
+       "        'Last day to apply for Study Abroad',\n",
+       "        'Last day of Registration;\\n\\t\\t\\tLast day to file ePermit for the Fall 2021;\\n\\t\\t\\tLast day to drop classes for 100% tuition refund;',\n",
+       "        'Start of Fall Term;\\n\\t\\t\\tClasses begin;\\n\\t\\t\\tInitial Registration Appeals begin;',\n",
+       "        'Change of program period; late fees apply']], dtype='<U294')"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy_value_rows[:5].T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fc2d1fb",
    "metadata": {},
    "outputs": [],
    "source": []
