imported pandas and made a DataFrame

--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -3553,8 +3553,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "8fc2d1fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('August 01',\n",
+       " 'August 18',\n",
+       " 'August 24',\n",
+       " 'August 25',\n",
+       " 'August 25 - 31',\n",
+       " 'August 26',\n",
+       " 'August 28',\n",
+       " 'August 31',\n",
+       " 'September 01',\n",
+       " 'September 03 - 08',\n",
+       " 'September 06',\n",
+       " 'September 09',\n",
+       " 'September 14',\n",
+       " 'September 15',\n",
+       " 'September 15 - 16',\n",
+       " 'September 23',\n",
+       " 'September 24',\n",
+       " 'October 01',\n",
+       " 'October 08',\n",
+       " 'October 11',\n",
+       " 'November 01',\n",
+       " 'November 02',\n",
+       " 'November 04',\n",
+       " 'November 06',\n",
+       " 'November 23',\n",
+       " 'November 25 - 28',\n",
+       " 'December 11',\n",
+       " 'December 13',\n",
+       " 'December 14',\n",
+       " 'December 15 - 21',\n",
+       " 'December 21',\n",
+       " 'December 24 - 25',\n",
+       " 'December 27',\n",
+       " 'December 28',\n",
+       " 'December 31',\n",
+       " 'January 1, 2022')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_list = list(zip(*value_rows))\n",
+    "series_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e549cabc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DATES', 'DAYS', '\\xa0']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_heads"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3b95d8f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(col_heads, series_list)))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(dict(zip(col_heads, series_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2eeb7f54",
    "metadata": {},
    "outputs": [],
    "source": []
