--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -3611,7 +3611,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e549cabc",
+   "id": "ba998701",
    "metadata": {},
    "outputs": [
     {
@@ -3631,30 +3631,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "3b95d8f8",
+   "execution_count": 46,
+   "id": "26c12503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "86fd5150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(dict(zip(col_heads, series_list)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "aaa6b9b4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [44], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mDataFrame(\u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(col_heads, series_list)))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATES</th>\n",
+       "      <th>DAYS</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>August 01</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>Application for degree for January and Februar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>August 18</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Last day to apply for Study Abroad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>August 24</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Last day of Registration;\\n\\t\\t\\tLast day to f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>August 25</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>Start of Fall Term;\\n\\t\\t\\tClasses begin;\\n\\t\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>August 25 - 31</td>\n",
+       "      <td>Wednesday - Tuesday</td>\n",
+       "      <td>Change of program period; late fees apply</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            DATES                 DAYS  \\\n",
+       "0       August 01               Sunday   \n",
+       "1       August 18            Wednesday   \n",
+       "2       August 24              Tuesday   \n",
+       "3       August 25            Wednesday   \n",
+       "4  August 25 - 31  Wednesday - Tuesday   \n",
+       "\n",
+       "                                                      \n",
+       "0  Application for degree for January and Februar...  \n",
+       "1                 Last day to apply for Study Abroad  \n",
+       "2  Last day of Registration;\\n\\t\\t\\tLast day to f...  \n",
+       "3  Start of Fall Term;\\n\\t\\t\\tClasses begin;\\n\\t\\...  \n",
+       "4          Change of program period; late fees apply  "
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.DataFrame(dict(zip(col_heads, series_list)))"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "0ef4ada8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATES</th>\n",
+       "      <th>DAYS</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>December 24 - 25</td>\n",
+       "      <td>Friday - Saturday</td>\n",
+       "      <td>College Closed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>December 27</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>College Closed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>December 28</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>Final Grade Submission Deadline for Fall 2021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>December 31</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>College Closed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>January 1, 2022</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>College Closed;\\n\\t\\t\\tFall 2021 Degree Confer...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               DATES               DAYS  \\\n",
+       "31  December 24 - 25  Friday - Saturday   \n",
+       "32       December 27             Monday   \n",
+       "33       December 28            Tuesday   \n",
+       "34       December 31             Friday   \n",
+       "35   January 1, 2022           Saturday   \n",
+       "\n",
+       "                                                       \n",
+       "31                                     College Closed  \n",
+       "32                                     College Closed  \n",
+       "33      Final Grade Submission Deadline for Fall 2021  \n",
+       "34                                     College Closed  \n",
+       "35  College Closed;\\n\\t\\t\\tFall 2021 Degree Confer...  "
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eeb7f54",
+   "id": "7779aef5",
    "metadata": {},
    "outputs": [],
    "source": []
