sorted by value

--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -3611,7 +3611,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ba998701",
+   "id": "c06942e1",
    "metadata": {},
    "outputs": [
     {
@@ -3632,7 +3632,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "26c12503",
+   "id": "eabfb74e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3642,7 +3642,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "86fd5150",
+   "id": "caedc126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3652,7 +3652,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "aaa6b9b4",
+   "id": "78d143c3",
    "metadata": {},
    "outputs": [
     {
@@ -3744,7 +3744,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0ef4ada8",
+   "id": "3fe778b2",
    "metadata": {},
    "outputs": [
     {
@@ -3835,8 +3835,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "1c63b9ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "byDays = df.groupby('DAYS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "c81bb026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size_table = byDays.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d84e13b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DAYS\n",
+      "Friday                  4\n",
+      "Friday - Saturday       1\n",
+      "Friday - Wednesday      1\n",
+      "Monday                  5\n",
+      "Saturday                4\n",
+      "Sunday                  1\n",
+      "Thursday                4\n",
+      "Thursday - Sunday       1\n",
+      "Tuesday                 8\n",
+      "Wednesday               4\n",
+      "Wednesday - Thursday    1\n",
+      "Wednesday - Tuesday     2\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(size_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "ae0d978d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DAYS\n",
+       "Tuesday                 8\n",
+       "Monday                  5\n",
+       "Friday                  4\n",
+       "Saturday                4\n",
+       "Thursday                4\n",
+       "Wednesday               4\n",
+       "Wednesday - Tuesday     2\n",
+       "Friday - Saturday       1\n",
+       "Friday - Wednesday      1\n",
+       "Sunday                  1\n",
+       "Thursday - Sunday       1\n",
+       "Wednesday - Thursday    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "size_table.sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7779aef5",
+   "id": "d3ae6834",
    "metadata": {},
    "outputs": [],
    "source": []
