imported google api, oauth client secret

--- a/ homework2-problem3-calscrape.ipynb
+++ b/ homework2-problem3-calscrape.ipynb
@@ -5500,8 +5500,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "27e847e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d5b925ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google_auth_oauthlib.flow import InstalledAppFlow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "39699289",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from googleapiclient.discovery import build"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56387f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.oauth2.credentials import Credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6929a6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scopes = ['https://www.googleapis.com/auth/calendar']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eed006ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow = InstalledAppFlow.from_client_secrets_file(\"client_secret2.json\", scopes=scopes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2831234e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow.run_console()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ec20241",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7128c2fb",
    "metadata": {},
    "outputs": [],
    "source": []
